[package]
name = "yt-tools"
version = "0.1.0"
authors = ["Matthew Turk <matthewturk@gmail.com>",
           "Madicken Munk <madicken.munk@gmail.com>"]
description = "Experiments with porting yt components to Rust"
license = "BSD-3-Clause"
repository = "data-exp-lab/rust-yt-tools"

[dependencies]
byteorder = "^1.2.1"
png = "0.11.0"
base64 = "0.8.0"
stdweb = "0.4.4"
serde = "1"
serde_json = "1"
serde_derive = "1"

[lib]
name = "yt_tools"
path = "src/lib.rs"
crate-type = ["cdylib", "dylib", "lib", "rlib"]

[[bin]]
name = "runner"
path = "src/main.rs"
