[package]
name = "yt-tools"
version = "0.2.1"
authors = ["Matthew Turk <matthewturk@gmail.com>",
           "Madicken Munk <madicken.munk@gmail.com>"]
description = "Experiments with porting yt components to Rust"
license = "BSD-3-Clause"
repository = "data-exp-lab/rust-yt-tools"

[dependencies]
wasm-bindgen = "0.2.15"

[lib]
name = "yt_tools"
path = "src/lib.rs"
crate-type = ["cdylib"]
